--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@
 # data files
 # ----------
 *.xls
-<<<<<<< HEAD
 #
 # directories
 # -----------
@@ -34,4 +33,7 @@ data/
 # cloned from Allen Downey's github
 # just wanted the iPython notebooks
 CompStats/
->>>>>>> 76e97f410daeac269838ec070f837115e6ec7103
+#
+# explict files
+.Rhistory
+
