--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 #
 # generated files
 # ---------------
+*.zip
 *.pdf
 *.html
 .ipynb_checkpoints
@@ -36,4 +37,5 @@ CompStats/
 #
 # explict files
 .Rhistory
+.RData
 
